--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,31 @@
-plugins {
+plugins
+{
     id 'java'
+    id 'application'
+}
+
+application
+{
+    mainClass.set("Application")
 }
 
 group 'com.jpvds1.hero'
 version '1.0-SNAPSHOT'
 
-repositories {
+repositories
+{
     mavenCentral()
 }
 
-dependencies {
+dependencies
+{
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
 }
 
-test {
+test
+{
     useJUnitPlatform()
 }
+
